@@ -23,6 +23,7 @@ Other features
  * ``PageChooserBlock`` can now accept a list/tuple of page models as ``target_model`` (Mikalai Radchuk)
  * Styling tweaks for the ModelAdmin's ``IndexView`` to be more inline with the Wagtail styleguide (Andy Babic)
  * Added `.nvmrc` to the project root for Node versioning support (Janneke Janssen)
+ * Added `form_fields_exclude` property to ModelAdmin views (Matheus Bratfisch)
 
 
 Bug fixes
