@@ -1,5 +1,6 @@
 from __future__ import absolute_import, unicode_literals
 
+import mock
 from django.contrib.auth import get_user_model
 from django.contrib.auth.models import Group
 from django.test import TestCase
@@ -181,6 +182,16 @@ class TestCreateView(TestCase, WagtailTestUtils):
         # Check that a form error was raised
         self.assertFormError(response, 'form', 'title', "This field is required.")
 
+    def test_exclude_passed_to_extract_panel_definitions(self):
+        path_to_form_fields_exclude_property = 'wagtail.contrib.modeladmin.options.ModelAdmin.form_fields_exclude'
+        with mock.patch('wagtail.contrib.modeladmin.views.extract_panel_definitions_from_model_class') as m:
+            with mock.patch(path_to_form_fields_exclude_property, new_callable=mock.PropertyMock) as mock_form_fields_exclude:
+                mock_form_fields_exclude.return_value = ['123']
+
+                self.get()
+                mock_form_fields_exclude.assert_called()
+                m.assert_called_with(Book, exclude=mock_form_fields_exclude.return_value)
+
 
 class TestInspectView(TestCase, WagtailTestUtils):
     fixtures = ['modeladmintest_test.json']
@@ -296,6 +307,16 @@ class TestEditView(TestCase, WagtailTestUtils):
 
         # Check that a form error was raised
         self.assertFormError(response, 'form', 'title', "This field is required.")
+
+    def test_exclude_passed_to_extract_panel_definitions(self):
+        path_to_form_fields_exclude_property = 'wagtail.contrib.modeladmin.options.ModelAdmin.form_fields_exclude'
+        with mock.patch('wagtail.contrib.modeladmin.views.extract_panel_definitions_from_model_class') as m:
+            with mock.patch(path_to_form_fields_exclude_property, new_callable=mock.PropertyMock) as mock_form_fields_exclude:
+                mock_form_fields_exclude.return_value = ['123']
+
+                self.get(1)
+                mock_form_fields_exclude.assert_called()
+                m.assert_called_with(Book, exclude=mock_form_fields_exclude.return_value)
 
 
 class TestPageSpecificViews(TestCase, WagtailTestUtils):
