@@ -115,7 +115,8 @@ class ModelFormView(WMABaseView, FormView):
         if hasattr(self.model, 'edit_handler'):
             edit_handler = self.model.edit_handler
         else:
-            panels = extract_panel_definitions_from_model_class(self.model)
+            fields_to_exclude = self.model_admin.get_form_fields_exclude(request=self.request)
+            panels = extract_panel_definitions_from_model_class(self.model, exclude=fields_to_exclude)
             edit_handler = ObjectList(panels)
         return edit_handler.bind_to_model(self.model)
 
